# FoxMDViewer

./: .gitignore  CHANGELOG.md  README.md  install.sh  mdv  mdv-wrapper.sh  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: __init__.py  routes.py  websocket.py
app/middleware/: __init__.py  cors.py
app/models/: __init__.py
app/services/: __init__.py  file_watcher.py  markdown.py
app/utils/: __init__.py  cache.py  port_finder.py  scanner.py
foxmdviewer/: __init__.py  cli.py  config.py  main.py
foxmdviewer/api/: __init__.py  routes.py  websocket.py
foxmdviewer/middleware/: __init__.py
foxmdviewer/models/: __init__.py  file.py
foxmdviewer/services/: __init__.py  file_watcher.py  markdown.py
foxmdviewer/static/css/: style.css
foxmdviewer/static/js/: app.js
foxmdviewer/templates/: base.html  index.html  viewer.html
foxmdviewer/utils/: __init__.py  browser.py  cache.py  scanner.py
static/css/: style.css
static/js/: app.js
templates/: base.html  index.html  viewer.html
tests/: conftest.py
tests/unit/: __init__.py  test_cache.py  test_markdown.py  test_models.py  test_port_finder.py  test_scanner.py
